fixed the overflowing paragraph content in merit row on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,7 @@ section {
   }
 
   .footer-wrap-mobile a {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: white;
   }
 
@@ -312,6 +312,6 @@ section {
   }
 
   .site-footer {
-    padding: 0 3rem;
+    padding: 0 2rem;
   }
 }
